[metadata]
name             = linkypy
version          = 0.1.0
summary          = This is Linky USB Python (TeleInfo)
description-file = README.md
author           = Roland SAIKALI
author-email     = roland@saikali.fr
home-page        = http://www.saikali.fr

[files]
packages         = linkypy

[global]
setup-hooks      = pbr.hooks.setup_hook

[entry_points]
console_scripts  =
    linkypy      = linkypy.console.cli:linkypy

[wheel]
universal       = 1
