[metadata]
name             = linkypy
version          = 0.1.0
summary          = This is Linky USB Python (TeleInfo)
description-file = README.md
author           = Roland SAIKALI
author-email     = roland@saikali.fr
home-page        = http://www.saikali.fr

[files]
packages         = linkypy

[global]
setup-hooks      = pbr.hooks.setup_hook

[entry_points]
console_scripts  =
    linkypy      = linkypy.console.cli:linkypy

[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules      = True

[build_sphinx]
all_files       = 1
build-dir       = doc/build
source-dir      = doc/source

[wheel]
universal       = 1
